redirect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-redirect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-redirect
  template:
    metadata:
      labels:
        app: nginx-redirect
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-redirect-svc
spec:
  selector:
    app: nginx-redirect
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
