update-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-bilgicloud-ingress
  annotations:
   kubernetes.io/ingress.class: nginx
   cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
  - host: test2.testlink.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: yakuphan-devops
              port:
                number: 80
      
  tls:
      - hosts:
          - test2.testlink.me
        secretName: secret-tls-2
